finished most cruds

--- a/apache/api.conf
+++ b/apache/api.conf
@@ -1,8 +1,10 @@
 <VirtualHost *:80>
+    ServerName todo.local
+    ServerAlias todo.local
     DocumentRoot /srv/api/public
-
     <Directory /srv/api/public>
-        AllowOverride None
-
+        AllowOverride All
+        Order Allow,Deny
+        Allow from All
     </Directory>
 </VirtualHost>
